# cgmodels

./: .gitignore  README.rst  justfile  pyproject.toml
datasets/cg_model_jul2023/jsons/: cs_2p3_toff_2P3.json  cs_2p3_toff_4P6.json  cs_2p3_toff_4P62.json  cs_2p3_toff_6P9.json  cs_2p3_toff_8P12.json  cs_2p3_ton_2P3.json  cs_2p3_ton_4P6.json  cs_2p3_ton_4P62.json  cs_2p3_ton_6P9.json  cs_2p3_ton_8P12.json  cs_2p4_toff_12P24.json  cs_2p4_toff_2P4.json  cs_2p4_toff_3P6.json  cs_2p4_toff_4P8.json  cs_2p4_toff_4P82.json  cs_2p4_toff_6P12.json  cs_2p4_toff_8P16.json  cs_2p4_ton_12P24.json  cs_2p4_ton_2P4.json  cs_2p4_ton_3P6.json  cs_2p4_ton_4P8.json  cs_2p4_ton_4P82.json  cs_2p4_ton_6P12.json  cs_2p4_ton_8P16.json  cs_3p4_toff_6P8.json
datasets/tester/: 2p3.json  2p3_toff.json  2p3_ton.json  2p4.json  3p4.json  3p4_toff.json  cgtest.json  test.json
docs/source/: blind_oct2025.rst  cg_model_jul2023.rst  cg_model_jul2023_2p3_toff.rst  cg_model_jul2023_2p3_ton.rst  cg_model_jul2023_2p4_toff.rst  cg_model_jul2023_2p4_ton.rst  cg_model_jul2023_3p4_toff.rst  conf.py  index.rst  starships_mar2025.rst  tester.rst
