[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cgmodels"
maintainers = [
  { name = "Andrew Tarzia", email = "andrew.tarzia@gmail.com" },
]
dependencies = [
  "chemiscope>0.7.3",
]
requires-python = ">=3.11"
dynamic = ["version"]
readme = "README.rst"

[project.optional-dependencies]
dev = [
  "moldoc",
  "pip-tools",
  "sphinx",
  "sphinx-copybutton",
  "sphinx-rtd-theme",
  "twine",
  "furo",
]

[project.urls]
github = "https://github.com/andrewtarzia/cgmodels"
documentation = "https://cgmodels.readthedocs.io"
